--- a/Webapp/style/screen.css
+++ b/Webapp/style/screen.css
@@ -53,6 +53,9 @@
     --global-whitespace-sm: calc(var(--global-baseline) * 3); /* 24 */
     --global-whitespace-md: calc(var(--global-baseline) * 4); /* 32 */
     --global-whitespace-lg: calc(var(--global-baseline) * 5); /* 40 */
+
+    --c-status__title-height: calc(1rem / 16 * 80);
+    --c-status__button-height: calc(1rem / 16 * 48);
 }
 
 /*------------------------------------*\
@@ -447,20 +450,28 @@ input::placeholder {
 */
 
 .c-popup {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: none;
+}
+
+.c-popup__content{
     background-color: #FFFFFF;
     border-radius: var(--global-baseline);
     padding: var(--global-whitespace-xxs);
     width: 100%;
-    max-width: calc(41 * var(--global-baseline));
+    max-width: calc(41 * var(--global-baseline) - var(--global-whitespace-xs));
 
-    position: fixed;
-    top: var(--global-whitespace-xxs);
-    bottom: var(--global-whitespace-xxs);
+    margin: var(--global-whitespace-xxs) auto;
 
-    left: 50%;
-    transform: translateX(-50%);
-
-    display: none;
+    box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.16);
 }
 
 .c-popup--shown {
@@ -491,6 +502,7 @@ input::placeholder {
 .c-button {
     cursor: pointer;
     width: 100%;
+    height: 48px;
     background: var(--button-backgroundColor, var(--global-color-alpha));
     border-radius: calc(var(--global-baseline) / 2);
 }
@@ -538,6 +550,27 @@ input::placeholder {
     text-align: center;
 }
 
+.c-status{
+    display: grid;
+    grid-template-rows: var(--c-status__title-height) 1fr var(--c-status__button-height);
+    min-height: 100vh;
+}
+
+.c-status__item--scroll{
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: calc(100vh - var(--c-status__title-height) - var(--c-status__button-height));
+}
+
+.c-status__item--scroll::-webkit-scrollbar { width: 0 !important }
+.c-status__item--scroll { overflow: -moz-scrollbars-none; }
+.c-status__item--scroll { -ms-overflow-style: none; }
+
+.c-overview{
+
+}
+
+
 /*
     Component: card
     ---
@@ -550,6 +583,7 @@ input::placeholder {
     border-radius: var(--global-baseline);
     text-align: center;
     margin-bottom: var(--global-whitespace-sm);
+    box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.16);
 }
 
 .c-card__value{
@@ -567,6 +601,7 @@ input::placeholder {
     background-color: var(--global-color-neutral-xx-light);
     border-radius: var(--global-baseline);
     padding: var(--global-whitespace-sm) var(--global-whitespace-xs) var(--global-whitespace-sm) var(--global-whitespace-xs);
+    box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.16);
 
 }
 
@@ -582,6 +617,7 @@ input::placeholder {
     
     }
 }
+
 
 
 /*------------------------------------*\
