--- a/Webapp/style/screen.css
+++ b/Webapp/style/screen.css
@@ -55,7 +55,7 @@
     --global-whitespace-lg: calc(var(--global-baseline) * 5); /* 40 */
 
     --c-status__title-height: calc(1rem / 16 * 80);
-    --c-status__button-height: calc(1rem / 16 * 48);
+    --c-status__button-height: calc(1rem / 16 * 56);
 }
 
 /*------------------------------------*\
@@ -77,6 +77,10 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: white;
+}
+
+body {
+    height: calc(100vh - var(--global-whitespace-xs));
 }
 
 *,
@@ -338,7 +342,7 @@ input::placeholder {
     max-width: calc(41 * var(--global-baseline));
     margin-left: auto;
     margin-right: auto;
-    min-height: 100vh;
+    height: 100%;
 }
 
 /*
@@ -451,12 +455,15 @@ input::placeholder {
 
 .c-popup {
     position: fixed;
-    z-index: 1;
-    left: 0;
+    
     top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    min-height: 100%; /* Full height */
+
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     display: none;
@@ -465,13 +472,11 @@ input::placeholder {
 .c-popup__content{
     background-color: #FFFFFF;
     border-radius: var(--global-baseline);
-    padding: var(--global-whitespace-xxs);
-    width: 100%;
+    padding: var(--global-whitespace-xs);
+    
     max-width: calc(41 * var(--global-baseline) - var(--global-whitespace-xs));
 
-    margin: var(--global-whitespace-xxs) auto;
-
-    box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.16);
+    margin: auto auto;
 }
 
 .c-popup--shown {
@@ -551,25 +556,12 @@ input::placeholder {
 }
 
 .c-status{
-    display: grid;
-    grid-template-rows: var(--c-status__title-height) 1fr var(--c-status__button-height);
-    min-height: 100vh;
+    height: 100%;
 }
 
-.c-status__item--scroll{
-    overflow-y: auto;
-    overflow-x: hidden;
-    height: calc(100vh - var(--c-status__title-height) - var(--c-status__button-height));
+.c-status__info {
+    margin-bottom: var(--global-whitespace-lg);
 }
-
-.c-status__item--scroll::-webkit-scrollbar { width: 0 !important }
-.c-status__item--scroll { overflow: -moz-scrollbars-none; }
-.c-status__item--scroll { -ms-overflow-style: none; }
-
-.c-overview{
-
-}
-
 
 /*
     Component: card
@@ -636,20 +628,6 @@ input::placeholder {
 
 .u-beta-textcolor{
     color: var(--global-color-beta)
-}
-
-/*
-    Utilities: bottompage
-    ---
-    Utility classes to an element on the bottom of teh page
-*/
-
-.u-bottompage{
-    position: fixed;
-    bottom: var(--global-whitespace-xs);
-    width: 100vw;
-    max-width: calc(41 * var(--global-baseline));
-    width: 100%;
 }
 
 
