--- a/Webapp/style/screen.css
+++ b/Webapp/style/screen.css
@@ -53,9 +53,6 @@
     --global-whitespace-sm: calc(var(--global-baseline) * 3); /* 24 */
     --global-whitespace-md: calc(var(--global-baseline) * 4); /* 32 */
     --global-whitespace-lg: calc(var(--global-baseline) * 5); /* 40 */
-
-    --c-status__title-height: calc(1rem / 16 * 80);
-    --c-status__button-height: calc(1rem / 16 * 56);
 }
 
 /*------------------------------------*\
@@ -442,8 +439,8 @@ input::placeholder {
 
 .c-footer__logo {
     padding: calc(var(--global-baseline) / 2);
-    height: 56px;
-    width: 56px;
+    height: 48px;
+    width: 48px;
     fill: #44C9F6;
 }
 
@@ -454,6 +451,7 @@ input::placeholder {
 */
 
 .c-popup {
+    overflow-y: auto;
     position: fixed;
     
     top: 0;
@@ -470,6 +468,7 @@ input::placeholder {
 }
 
 .c-popup__content{
+    position: relative;
     background-color: #FFFFFF;
     border-radius: var(--global-baseline);
     padding: var(--global-whitespace-xs);
@@ -495,6 +494,67 @@ input::placeholder {
 .c-popup__close:focus,
 .c-popup__close:active {
     fill: var(--global-color-neutral-x-dark);  
+}
+
+/*
+    Component: Info
+    ---
+    Info popup
+*/
+
+.c-info__title {
+    margin-bottom: var(--global-whitespace-xs);
+}
+
+.c-infoblock {
+    margin-bottom: 16px;
+}
+
+.c-infoblock__title {
+    font-size: calc(20rem / var(--global-font-size));
+    line-height: calc(30rem / var(--global-font-size));
+}
+
+/*
+    Component: Table
+    ---
+    Table with highscores
+*/
+
+.c-infoblock__table {
+    overflow-y: auto;
+    max-height: calc(25 * var(--global-baseline));
+    border: 1px solid var(--global-color-neutral-dark);
+}
+
+.c-table {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+.c-table__item {
+    word-break: break-all;
+    width: 70%;
+    padding: calc(var(--global-baseline) / 8 * 2) var(--global-whitespace-xxs); 
+}
+
+.c-table__row:nth-child(odd) {
+    background: var(--global-color-neutral-xx-light);
+}
+
+/*
+    Component: countdown
+    ---
+    Grey cards with information in them
+*/
+
+.c-countdown__time {
+    margin-top: var(--global-whitespace-xxs);
+    font-size: calc(58rem / var(--global-font-size));
+    line-height: calc(57rem / var(--global-font-size));
+    font-weight: 600;
+    text-align: center;
 }
 
 /*
@@ -544,7 +604,7 @@ input::placeholder {
     line-height: calc(48rem / var(--global-font-size));
     font-weight: 700; /* bold */
     text-align: center;
-    margin: var(--global-whitespace-xs) 0 var(--global-whitespace-xs) 0;
+    margin: 0;
 }
 
 .c-subtitle {
@@ -608,8 +668,6 @@ input::placeholder {
     
     }
 }
-
-
 
 /*------------------------------------*\
 #UTILITIES
