--- a/Webapp/style/screen.css
+++ b/Webapp/style/screen.css
@@ -262,8 +262,7 @@ input::placeholder {
 .o-container {
     margin-left: auto;
     margin-right: auto;
-    max-width: 79.5em; /* 79.5 * 16px = 1272 */
-    width: 100%;
+    max-width: calc(41 * var(--global-baseline));
 }
 
 /*
@@ -346,10 +345,11 @@ input::placeholder {
 */
 
 .c-app {
-    max-width: calc(41 * var(--global-baseline));
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
+    display: flex;
+
+    flex-direction: column;
+
+    min-height: 100vh;
 }
 
 /*
@@ -359,6 +359,8 @@ input::placeholder {
 */
 
 .c-startpage {
+    flex-grow: 1;
+
     color: white;
     text-align: center;
 }
@@ -421,7 +423,7 @@ input::placeholder {
 */
 
 .c-footer {
-    position: fixed;
+    position: ;
     left: 0;
     bottom: 0;
     right: 0;
@@ -670,7 +672,7 @@ input::placeholder {
 }
 
 .c-status{
-    height: 100%;
+    flex-grow: 1;
 }
 
 .c-status__info {
@@ -684,6 +686,18 @@ input::placeholder {
 
 .c-overview__title{
     padding-bottom: var(--global-whitespace-xs);
+}
+
+/*
+    Component: stop button
+    ---
+    Stick stop button to bottom
+*/
+
+.c-stopbutton {
+    position: sticky;
+    bottom: 0;
+    width: 100%;
 }
 
 
