--- a/Webapp/style/screen.css
+++ b/Webapp/style/screen.css
@@ -263,6 +263,7 @@ input::placeholder {
     margin-left: auto;
     margin-right: auto;
     max-width: calc(41 * var(--global-baseline));
+    width:100%;
 }
 
 /*
@@ -367,6 +368,7 @@ input::placeholder {
 
 .c-logo__svg {
     max-width: 100%;
+    max-height: 133px;
     fill: #FFFFFF;
 }
 
@@ -423,7 +425,6 @@ input::placeholder {
 */
 
 .c-footer {
-    position: ;
     left: 0;
     bottom: 0;
     right: 0;
